fix: overflow to all individual sections

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,6 @@ body {
   font-family: "Poppins", sans-serif;
   user-select: none;
   -webkit-font-smoothing: antialiased;
-  overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
